# demo-sales-insights

./: .gitignore
src/: main.css  main.py  pyproject.toml  requirements.txt
src/algorithms/: algorithms.py
src/configuration/: config.py  config.toml
src/data/: data_augmentation.py  get_data.py
src/pages/Admin/: Admin.md
src/pages/Analysis/: Analysis.py
src/pages/Overview/: Overview.py
src/pages/Predictions/: Predictions.md  Predictions.py
src_single_page_taipy_tech_talk/: main.py
