[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["FlorianJacta <98709993+FlorianJacta@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
taipy = "4.0.0.dev0"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.1"
pmdarima = "^2.0.4"
plotly = "^5.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
